Fix CSS z-index

--- a/frontend/src/components/Playlists/PlaylistIndex/DeletePlaylistModal/DeletePlaylistModal.css
+++ b/frontend/src/components/Playlists/PlaylistIndex/DeletePlaylistModal/DeletePlaylistModal.css
@@ -7,12 +7,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* z-index: 1000; */
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.5);
-  /* background-color: pink; */
 }
 
 .deletePlaylistModal {
+  position: absolute;
   background-color: white;
   color: black;
   padding: 30px 22px;
@@ -24,6 +24,7 @@
   gap: 10px;
   width: 26%;
   z-index: 1000;
+  /* border: 1px solid red; */
 }
 
 .deletePlaylistModal h2 {
