--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -10,6 +10,7 @@
   padding: .5%;
   background-color: black;
   color: gray;
+  z-index: 1000;
 }
 
 .menuList {
